# cortical-folding-sim

./: .gitignore  CONTINUATION.md  PLAN.md  PROJECT_OVERVIEW.md  README.md  pyproject.toml
configs/: forward_sweep_baseline.json  forward_sweep_week3.json  high_fidelity_forward_sweep.json  high_fidelity_matrix.json  high_fidelity_publication_render.json  validation_gates_default.json  validation_gates_failcase.json  week3_anisotropy_ab.json  week4_collision_ablation.json  week5_layered_ablation.json
docs/: high_fidelity_mode.md  results_index.md  validation_backlog.md  validation_week2.md  week3_anisotropy.md  week4_collision.md  week5_layered_ablation.md  week6_figure_pipeline.md  week7_animation_pack.md  week8_final_packaging.md  week8_methods_results_packet.md  week8_paper_takeaways.md
results/: forward_sweep.csv  forward_sweep_manifest.json  forward_sweep_summary.json  forward_sweep_summary_seed_repeat.json  validation_gate_report.json  validation_gate_report_failcase.json  week3_anisotropy_ab.csv  week3_anisotropy_ab_manifest.json  week3_anisotropy_ab_summary.json  week3_anisotropy_comparison.json  week4_collision_ablation.csv  week4_collision_ablation_manifest.json  week4_collision_ablation_summary.json  week4_collision_comparison.json  week5_hardened_validation.json  week5_layered_ablation.csv  week5_layered_ablation_manifest.json  week5_layered_ablation_summary.json  week5_layered_comparison.json  week5_matrix_check.csv  week5_matrix_seed11.csv  week5_matrix_seed11_manifest.json  week5_matrix_seed11_summary.json  week5_matrix_seed23.csv  week5_matrix_seed37.csv  (+99 more)
(+110 files in other folders)
