[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cortical-folding-sim"
version = "0.1.0"
description = "Differentiable cortical folding simulator using JAX"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "equinox>=0.11.0",
    "optax>=0.1.7",
    "trimesh>=4.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
viz3d = ["pyvista>=0.42.0"]
dev = ["pytest>=7.0", "pytest-xdist>=3.0"]

[tool.setuptools.packages.find]
where = ["src"]
